--- a/Mission3/app/src/main/res/values/strings.xml
+++ b/Mission3/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mission3</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
 </resources>
