--- a/Mission4/app/src/main/res/values/strings.xml
+++ b/Mission4/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mission4</string>
+    <string name="max_bytes">&#032;/&#032;80&#032;바이트</string>
+    <string name="transmit">전송</string>
+    <string name="cancel">닫기</string>
 </resources>
