--- a/Mission6/app/src/main/res/values/strings.xml
+++ b/Mission6/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="login">로그인</string>
     <string name="id">아이디</string>
     <string name="password">비밀번호</string>
+    <string name="manage_customer">고객 관리</string>
+    <string name="manage_income">매출 관리</string>
+    <string name="manage_item">상품 관리</string>
 </resources>
