--- a/Mission6/app/src/main/res/values/strings.xml
+++ b/Mission6/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="manage_customer">고객 관리</string>
     <string name="manage_income">매출 관리</string>
     <string name="manage_item">상품 관리</string>
+    <string name="to_menu">메뉴로</string>
+    <string name="to_login">로그인으로</string>
 </resources>
