--- a/Mission7/app/src/main/res/values/strings.xml
+++ b/Mission7/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Mission7</string>
+    <string name="save">저장</string>
+    <string name="name">이름</string>
+    <string name="age">나이</string>
+    <string name="birth">생년월일</string>
 </resources>
