--- a/Mission7/app/src/main/res/values/strings.xml
+++ b/Mission7/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="name">이름</string>
     <string name="age">나이</string>
     <string name="birth">생년월일</string>
+    <string name="year">년</string>
+    <string name="month">월</string>
+    <string name="day">일</string>
 </resources>
